--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from profiler import profiler\n",
+    "\n",
+    "# Add Excel file to DataFrame\n",
+    "df = pd.read_excel(\"Employee Turnover Dataset.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +65,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>10321.000000</td>\n",
+       "      <td>10317.000000</td>\n",
        "      <td>10322.000000</td>\n",
        "      <td>10322.000000</td>\n",
        "      <td>10322.000000</td>\n",
@@ -76,7 +89,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>39.045538</td>\n",
+       "      <td>39.034409</td>\n",
        "      <td>806.363495</td>\n",
        "      <td>26.127882</td>\n",
        "      <td>2.973939</td>\n",
@@ -100,7 +113,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>12.563238</td>\n",
+       "      <td>12.502155</td>\n",
        "      <td>404.881817</td>\n",
        "      <td>53.149200</td>\n",
        "      <td>1.417019</td>\n",
@@ -124,7 +137,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>12.000000</td>\n",
+       "      <td>18.000000</td>\n",
        "      <td>100.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -220,7 +233,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>148.000000</td>\n",
+       "      <td>60.000000</td>\n",
        "      <td>1500.000000</td>\n",
        "      <td>3737.000000</td>\n",
        "      <td>5.000000</td>\n",
@@ -249,14 +262,14 @@
       ],
       "text/plain": [
        "                Age     DailyRate  DistanceFromHome     Education  \\\n",
-       "count  10321.000000  10322.000000      10322.000000  10322.000000   \n",
-       "mean      39.045538    806.363495         26.127882      2.973939   \n",
-       "std       12.563238    404.881817         53.149200      1.417019   \n",
-       "min       12.000000    100.000000          1.000000      1.000000   \n",
+       "count  10317.000000  10322.000000      10322.000000  10322.000000   \n",
+       "mean      39.034409    806.363495         26.127882      2.973939   \n",
+       "std       12.502155    404.881817         53.149200      1.417019   \n",
+       "min       18.000000    100.000000          1.000000      1.000000   \n",
        "25%       28.000000    455.250000         13.000000      2.000000   \n",
        "50%       39.000000    806.000000         25.000000      3.000000   \n",
        "75%       50.000000   1159.000000         38.000000      4.000000   \n",
-       "max      148.000000   1500.000000       3737.000000      5.000000   \n",
+       "max       60.000000   1500.000000       3737.000000      5.000000   \n",
        "\n",
        "       EmployeeCount  EmployeeNumber  EnvironmentSatisfaction    HourlyRate  \\\n",
        "count   10322.000000    10322.000000             10322.000000  10322.000000   \n",
@@ -311,18 +324,178 @@
        "[8 rows x 25 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Step 1. Read the Excel file into a DataFrame\n",
-    "df = pd.read_excel(\"Employee Turnover Dataset.xlsx\")\n",
-    "df.describe()\n"
+    "# Remove ages that fall outside of a resonable number range \n",
+    "df.loc[(df['Age'] > 90) | (df['Age'] < 16), 'Age'] = None\n",
+    "df.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10322 Total row count before removing duplicates\n",
+      "10024 Total row count after removing duplicates\n"
+     ]
+    }
+   ],
+   "source": [
+    "## REMOVE DUPLICATE ROWS\n",
+    "\n",
+    "# Show Row Count\n",
+    "print(len(df.index), \"Total row count before removing duplicates\")\n",
+    "\n",
+    "# Drop Duplicates\n",
+    "df = df.drop_duplicates()\n",
+    "\n",
+    "# Show Row Count After removing duplicates\n",
+    "print(len(df.index), \"Total row count after removing duplicates\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Age Turnover     BusinessTravel  DailyRate              Department  \\\n",
+      "0      33.0      Yes         Non-Travel        241                Hardware   \n",
+      "1      35.0      Yes         Non-Travel        679                 Support   \n",
+      "2      27.0      Yes  Travel_Frequently        359                Hardware   \n",
+      "3      44.0       No      Travel_Rarely       1133                Software   \n",
+      "4      56.0       No      Travel_Rarely        118                Software   \n",
+      "...     ...      ...                ...        ...                     ...   \n",
+      "10316  19.0      Yes         Non-Travel        105  Research & Development   \n",
+      "10317  23.0       No      Travel_Rarely       1373                   Sales   \n",
+      "10318  47.0      Yes         Non-Travel       1250         Human Resources   \n",
+      "10320  47.0      Yes      Travel_Rarely        486                Hardware   \n",
+      "10321  40.0      Yes  Travel_Frequently       1213                Hardware   \n",
+      "\n",
+      "       DistanceFromHome  Education    EducationField  EmployeeCount  \\\n",
+      "0                    16          3  Technical Degree              1   \n",
+      "1                     7          2     Life Sciences              1   \n",
+      "2                    50          1     Life Sciences              1   \n",
+      "3                    12          5     Life Sciences              1   \n",
+      "4                    43          2   Human Resources              1   \n",
+      "...                 ...        ...               ...            ...   \n",
+      "10316                24          1           Medical              1   \n",
+      "10317                 2          3   Human Resources              1   \n",
+      "10318                27          3           Medical              1   \n",
+      "10320                44          5             Other              1   \n",
+      "10321                33          1  Technical Degree              1   \n",
+      "\n",
+      "       EmployeeNumber  ...  RelationshipSatisfaction StandardHours  \\\n",
+      "0                3505  ...                         1            80   \n",
+      "1                1129  ...                         1            80   \n",
+      "2                6305  ...                         4            80   \n",
+      "3                4595  ...                         4            80   \n",
+      "4                7203  ...                         2            80   \n",
+      "...               ...  ...                       ...           ...   \n",
+      "10316            4122  ...                         1            80   \n",
+      "10317            9552  ...                         1            80   \n",
+      "10318            4546  ...                         4            80   \n",
+      "10320            4636  ...                         3            80   \n",
+      "10321            5122  ...                         3            80   \n",
+      "\n",
+      "       StockOptionLevel  TotalWorkingYears  TrainingTimesLastYear  \\\n",
+      "0                     4               35.0                    4.0   \n",
+      "1                     1                5.0                    1.0   \n",
+      "2                     4               10.0                    4.0   \n",
+      "3                     3               19.0                    4.0   \n",
+      "4                     1                3.0                    3.0   \n",
+      "...                 ...                ...                    ...   \n",
+      "10316                 1               26.0                    6.0   \n",
+      "10317                 4               26.0                    4.0   \n",
+      "10318                 1               19.0                    6.0   \n",
+      "10320                 3               12.0                    6.0   \n",
+      "10321                 4               29.0                    3.0   \n",
+      "\n",
+      "      WorkLifeBalance  YearsAtCompany YearsInCurrentRole  \\\n",
+      "0                   4              13                  2   \n",
+      "1                   1               4                  3   \n",
+      "2                   2               4                  2   \n",
+      "3                   1              14                  7   \n",
+      "4                   4               1                  1   \n",
+      "...               ...             ...                ...   \n",
+      "10316               4               8                  8   \n",
+      "10317               3               1                  1   \n",
+      "10318               2              17                  1   \n",
+      "10320               4               7                  5   \n",
+      "10321               4              29                 27   \n",
+      "\n",
+      "       YearsSinceLastPromotion  YearsWithCurrManager  \n",
+      "0                          8.0                    11  \n",
+      "1                          3.0                     4  \n",
+      "2                          4.0                     2  \n",
+      "3                         12.0                     2  \n",
+      "4                          1.0                     1  \n",
+      "...                        ...                   ...  \n",
+      "10316                      3.0                     5  \n",
+      "10317                      1.0                     1  \n",
+      "10318                      8.0                    11  \n",
+      "10320                      5.0                     1  \n",
+      "10321                     27.0                    18  \n",
+      "\n",
+      "[10024 rows x 35 columns]\n",
+      "['Non-Travel', 'Travel_Frequently', 'Travel_Rarely', None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove \n",
+    "df.loc[~df['BusinessTravel'].isin(['Non-Travel', 'Travel_Frequently', 'Travel_Rarely']), 'BusinessTravel'] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique values in 'Age':\n",
+      "[33. 35. 27. 44. 56. 34. 59. 28. 26. 42. 22. 53. 51. 19. 32. 38. 47. 60.\n",
+      " 55. 46. 49. 39. 41. 48. 40. 31. 54. 30. 37. 24. 36. 52. 50. nan 57. 43.\n",
+      " 21. 58. 45. 29. 20. 25. 18. 23.]\n",
+      "\n",
+      "Describe output for 'Age':\n",
+      "                Age\n",
+      "count  10019.000000\n",
+      "mean      39.027747\n",
+      "std       12.491228\n",
+      "min       18.000000\n",
+      "25%       28.000000\n",
+      "50%       39.000000\n",
+      "75%       50.000000\n",
+      "max       60.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "column_df = profiler(df, 'Age')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
