--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,27 +45,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## DISTANCEFROMHOME COLUMN - Change abnormal values to Null\n",
+    "df.loc[(df['DistanceFromHome'] > 90)] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unique values in 'Turnover':\n",
-      "['Yes' 'No']\n",
+      "Unique values in 'DistanceFromHome' (sorted):\n",
+      "[1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, None]\n",
       "\n",
-      "Describe output for 'Turnover':\n",
-      "       Turnover\n",
-      "count     10024\n",
-      "unique        2\n",
-      "top          No\n",
-      "freq       5136\n"
+      "Are there null values in 'DistanceFromHome'? Yes\n",
+      "\n",
+      "Describe output for 'DistanceFromHome':\n",
+      "       DistanceFromHome\n",
+      "count      10021.000000\n",
+      "mean          25.322223\n",
+      "std           14.453631\n",
+      "min            1.000000\n",
+      "25%           13.000000\n",
+      "50%           25.000000\n",
+      "75%           38.000000\n",
+      "max           50.000000\n"
      ]
     }
    ],
    "source": [
-    "column_df = profiler(df, 'Turnover')"
+    "column_df = profiler(df, 'DistanceFromHome')"
    ]
   }
  ],
