--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,33 +55,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unique values in 'DistanceFromHome' (sorted):\n",
-      "[1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, None]\n",
+      "All values in 'Education' are of type float.\n",
       "\n",
-      "Are there null values in 'DistanceFromHome'? Yes\n",
+      "Number of NaN or Null values in 'Education': 3\n",
+      "Number of blank space values in 'Education': 0\n",
       "\n",
-      "Describe output for 'DistanceFromHome':\n",
-      "       DistanceFromHome\n",
-      "count      10021.000000\n",
-      "mean          25.322223\n",
-      "std           14.453631\n",
-      "min            1.000000\n",
-      "25%           13.000000\n",
-      "50%           25.000000\n",
-      "75%           38.000000\n",
-      "max           50.000000\n"
+      "Unique values in 'Education' (sorted):\n",
+      "[1.0, 2.0, 3.0, 4.0, 5.0, nan]\n",
+      "\n",
+      "Are there null values in 'Education'? Yes\n",
+      "\n",
+      "Describe output for 'Education':\n",
+      "          Education\n",
+      "count  10021.000000\n",
+      "mean       2.973057\n",
+      "std        1.416777\n",
+      "min        1.000000\n",
+      "25%        2.000000\n",
+      "50%        3.000000\n",
+      "75%        4.000000\n",
+      "max        5.000000\n"
      ]
     }
    ],
    "source": [
-    "column_df = profiler(df, 'DistanceFromHome')"
+    "column_df = profiler(df, 'Education')"
    ]
   }
  ],
