added global cleaning commands to first cell

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,8 +4,8 @@
 // DailyRate
 // Department
 // DistanceFromHome
-Education
-EducationField
+// Education
+// EducationField
 EmployeeCount
 EmployeeNumber
 EnvironmentSatisfaction
