--- a/main.ipynb
+++ b/main.ipynb
@@ -2,91 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from profiler import profiler\n",
     "\n",
-    "## CREATE DATAFRAME\n",
-    "df = pd.read_excel(\"Employee Turnover Dataset.xlsx\")"
+    "# CREATE DATAFRAME\n",
+    "df = pd.read_excel(\"Employee Turnover Dataset.xlsx\")\n",
+    "\n",
+    "# REMOVE DUPLICATE ROWS\n",
+    "df = df.drop_duplicates()\n",
+    "\n",
+    "# CONVERT NoneType TO NaN AND REPLACE BLANKS WITH NaN\n",
+    "df = df.map(lambda x: np.nan if x is None or (isinstance(x, str) and x.strip() == '') else x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## REMOVE DUPLICATE ROWS\n",
-    "df = df.drop_duplicates()"
+    "# AGE COLUMN - Removes ages outside reasonable range\n",
+    "df.loc[(df['Age'] > 90) | (df['Age'] < 16), 'Age'] = np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## AGE COLUMN - Removes ages outside resonable range\n",
-    "df.loc[(df['Age'] > 90) | (df['Age'] < 16), 'Age'] = None"
+    "# BUSINESSTRAVEL COLUMN - Make null if value doesn't match 1 of the 3 categories \n",
+    "df.loc[~df['BusinessTravel'].isin(['Non-Travel', 'Travel_Frequently', 'Travel_Rarely']), 'BusinessTravel'] = np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# BUSINESSTRAVEL COLUMN - Make null if value doesnt match one of the 3 categories \n",
-    "df.loc[~df['BusinessTravel'].isin(['Non-Travel', 'Travel_Frequently', 'Travel_Rarely']), 'BusinessTravel'] = None"
+    "# DISTANCEFROMHOME COLUMN - Change abnormal values to Null\n",
+    "df.loc[(df['DistanceFromHome'] > 90), 'DistanceFromHome'] = np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## DISTANCEFROMHOME COLUMN - Change abnormal values to Null\n",
-    "df.loc[(df['DistanceFromHome'] > 90)] = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All values in 'Education' are of type float.\n",
+      "All values in 'EmployeeCount' are of type int.\n",
       "\n",
-      "Number of NaN or Null values in 'Education': 3\n",
-      "Number of blank space values in 'Education': 0\n",
+      "Number of NaN or Null values in 'EmployeeCount': 0\n",
+      "Number of blank space values in 'EmployeeCount': 0\n",
       "\n",
-      "Unique values in 'Education' (sorted):\n",
-      "[1.0, 2.0, 3.0, 4.0, 5.0, nan]\n",
+      "Unique values in 'EmployeeCount' (sorted):\n",
+      "[-1, 1, 3]\n",
       "\n",
-      "Are there null values in 'Education'? Yes\n",
+      "Are there null values in 'EmployeeCount'? No\n",
       "\n",
-      "Describe output for 'Education':\n",
-      "          Education\n",
-      "count  10021.000000\n",
-      "mean       2.973057\n",
-      "std        1.416777\n",
-      "min        1.000000\n",
-      "25%        2.000000\n",
-      "50%        3.000000\n",
-      "75%        4.000000\n",
-      "max        5.000000\n"
+      "Describe output for 'EmployeeCount':\n",
+      "       EmployeeCount\n",
+      "count   10024.000000\n",
+      "mean        0.999800\n",
+      "std         0.034601\n",
+      "min        -1.000000\n",
+      "25%         1.000000\n",
+      "50%         1.000000\n",
+      "75%         1.000000\n",
+      "max         3.000000\n"
      ]
     }
    ],
    "source": [
-    "column_df = profiler(df, 'Education')"
+    "column_df = profiler(df, 'EmployeeCount')"
    ]
   }
  ],
