all columns cleaned

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,30 +6,30 @@
 // DistanceFromHome
 // Education
 // EducationField
-EmployeeCount
-EmployeeNumber
-EnvironmentSatisfaction
-Gender
-HourlyRate
-JobInvolvement
-JobLevel
-JobRole
-JobSatisfaction
-MaritalStatus
-MonthlyIncome
+// EmployeeCount
+// EmployeeNumber
+// EnvironmentSatisfaction
+// Gender
+// HourlyRate
+// JobInvolvement
+// JobLevel
+// JobRole
+// JobSatisfaction
+// MaritalStatus
+// MonthlyIncome
 MonthlyRate
-NumCompaniesWorked
-Over18
-OverTime
-PercentSalaryHike
-PerformanceRating
-RelationshipSatisfaction
-StandardHours
-StockOptionLevel
-TotalWorkingYears
-TrainingTimesLastYear
-WorkLifeBalance
-YearsAtCompany
-YearsInCurrentRole
-YearsSinceLastPromotion
-YearsWithCurrManager
+// NumCompaniesWorked
+// Over18
+// OverTime
+// PercentSalaryHike
+// PerformanceRating
+// RelationshipSatisfaction
+// StandardHours
+// StockOptionLevel
+// TotalWorkingYears
+// TrainingTimesLastYear
+// WorkLifeBalance
+// YearsAtCompany
+// YearsInCurrentRole
+// YearsSinceLastPromotion
+// YearsWithCurrManager
